[package]
name = "heathen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "a WASM-compatible GUI engine that is agnostic of platform, backend, language, and markup"
repository = "https://github.com/konall/heathen"

[dependencies]
miniserde = "0.1"
lyon = { version = "1", features = ["serialization"] }
taffy = { version = "0.3", features = ["serde"] }
accesskit = { version = "0.11", features = ["serde"] }
wasmi = "0.29"
nom = "7"
glam = "0.23"
colorgrad = "0.6"
once_cell = "1"

[dev-dependencies]
minifb = "0.24"
wat = "1"
