[package]
name = "heathen"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "a WASM-compatible GUI engine that is agnostic of platform, backend, language, and markup"
repository = "https://github.com/konall/heathen"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lyon = "1"
taffy = { version = "0.3", features = ["serde"] }
accesskit = "0.11"
wasmi = "0.29"
wit-bindgen = "0.7"
glam = "0.24"
colorgrad = "0.6"
once_cell = "1"

[dev-dependencies]
winit = "0.28.6"
wgpu = "0.16"
minifb = "0.24"
wasmtime = "9.0"
